--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@becode/eslint-config": "^0.9.1",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
+    "body-parser": "^1.19.0",
     "eslint": "^7.0.0",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.20.0",
@@ -45,6 +46,7 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "mongoose": "^5.9.15",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
