--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel-cli": "^6.26.0",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
+    "bulma": "^0.8.2",
     "css-loader": "^3.5.3",
     "eslint": "^7.0.0",
     "eslint-plugin-prettier": "^3.1.3",
@@ -42,6 +43,7 @@
     "less-loader": "^6.1.0",
     "lint-staged": "^10.2.3",
     "prettier": "^2.0.5",
+    "react-bulma-components": "^3.3.0",
     "style-loader": "^1.2.1",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^4.43.0",
