--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
+    "@babel/cli": "^7.10.1",
     "@babel/core": "^7.9.6",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/plugin-proposal-decorators": "^7.8.3",
@@ -41,6 +41,7 @@
     "husky": "^4.2.5",
     "less-loader": "^6.1.0",
     "lint-staged": "^10.2.3",
+    "mongoose": "^5.9.17",
     "prettier": "^2.0.5",
     "style-loader": "^1.2.1",
     "uglifyjs-webpack-plugin": "^2.2.0",
