--- a/package.json
+++ b/package.json
@@ -44,7 +44,12 @@
     "webpack-cli": "^3.3.11"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "express-validator": "^6.5.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.9.17",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
