--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
+    "@babel/cli": "^7.10.1",
     "@babel/core": "^7.9.6",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/plugin-proposal-decorators": "^7.8.3",
@@ -30,22 +30,35 @@
     "@becode/eslint-config": "^0.9.1",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
-    "eslint": "^7.0.0",
+    "eslint": "^7.1.0",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.20.0",
-    "eslint-plugin-unicorn": "^20.0.0",
+    "eslint-plugin-unicorn": "^20.1.0",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.3",
     "prettier": "^2.0.5",
     "uglifyjs-webpack-plugin": "^2.2.0",
-    "webpack": "^4.43.0",
+    "webpack": "^4.28.4",
     "webpack-cli": "^3.3.11"
   },
   "dependencies": {
+    "@progress/kendo-react-common": "^3.14.0",
+    "@progress/kendo-react-inputs": "^3.14.0",
+    "@progress/kendo-react-labels": "^3.14.0",
+    "@progress/kendo-react-popup": "^3.14.0",
+    "babel-preset-es2015": "^6.24.1",
+    "balanced-match": "^1.0.0",
+    "bulma": "^0.8.2",
+    "bulma-helpers": "^0.3.12",
+    "bulma-spacing": "^2.0.4",
     "express": "^4.17.1",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
+    "react-bulma-components": "^3.3.0",
+    "react-color": "^2.18.1",
+    "react-colour-wheel": "^1.0.7",
     "react-dom": "^16.13.1"
   },
   "husky": {
