--- a/package.json
+++ b/package.json
@@ -51,16 +51,17 @@
     "@progress/kendo-react-popup": "^3.14.0",
     "babel-preset-es2015": "^6.24.1",
     "balanced-match": "^1.0.0",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "bulma": "^0.8.2",
     "bulma-helpers": "^0.3.12",
     "bulma-spacing": "^2.0.4",
-    "prop-types": "^15.7.2",
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "express-validator": "^6.5.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.17",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-bulma-components": "^3.3.0",
     "react-color": "^2.18.1",
