--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "leny <leny@becode.org>",
   "license": "MIT",
   "private": true,
+  "main": "./client/app.js",
   "scripts": {
     "lint": "npx eslint --fix --cache --ignore-pattern 'docs/*' src",
     "build:server": "npx babel src/server -s --out-dir bin/server",
@@ -12,7 +13,7 @@
     "build:client": "npx webpack --progress --profile --colors",
     "work:client": "npx webpack --env=dev --progress",
     "build": "npm run build:server && npm run build:client",
-    "start": "npx babel src/server -s --watch --verbose --out-dir bin/server && npx webpack --env=dev --progress"
+    "start": "node app.js"
   },
   "lint-staged": {
     "*.js": [
