--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "leny <leny@becode.org>",
   "license": "MIT",
   "private": true,
+  "main": "app.js",
   "scripts": {
     "lint": "npx eslint --fix --cache --ignore-pattern 'docs/*' src",
     "build:server": "npx babel src/server -s --out-dir bin/server",
@@ -12,7 +13,7 @@
     "build:client": "npx webpack --progress --profile --colors",
     "work:client": "npx webpack --env=dev --progress",
     "build": "npm run build:server && npm run build:client",
-    "start": "npx babel src/server -s --watch --verbose --out-dir bin/server"
+    "start": "node app"
   },
   "lint-staged": {
     "*.js": [
@@ -29,6 +30,7 @@
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-react": "^7.9.4",
     "@becode/eslint-config": "^0.9.1",
+    "babel-cli": "^6.26.0",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "body-parser": "^1.19.0",
