--- a/package.json
+++ b/package.json
@@ -55,12 +55,16 @@
     "bulma-spacing": "^2.0.4",
     "create-react-app": "^3.4.1",
     "express": "^4.17.1",
+    "indicative": "^7.4.4",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-bulma-components": "^3.3.0",
     "react-color": "^2.18.1",
     "react-colour-wheel": "^1.0.7",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-hook-form": "^5.7.2",
+    "react-native-indicative": "^0.2.1",
+    "save": "^2.4.0"
   },
   "husky": {
     "hooks": {
