--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/cli": "^7.10.1",
     "@babel/core": "^7.9.6",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/plugin-proposal-decorators": "^7.8.3",
@@ -28,7 +29,6 @@
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-react": "^7.9.4",
     "@becode/eslint-config": "^0.9.1",
-    "babel-cli": "^6.26.0",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "body-parser": "^1.19.0",
@@ -70,7 +70,6 @@
     "react": "^16.13.1",
     "react-bulma-components": "^3.3.0",
     "react-color": "^2.18.1",
-    "react-colour-wheel": "^1.0.7",
     "react-dom": "^16.13.1",
     "leaflet": "^1.6.0",
     "react-leaflet": "^2.7.0"
