--- a/package.json
+++ b/package.json
@@ -5,11 +5,10 @@
   "author": "leny <leny@becode.org>",
   "license": "MIT",
   "private": true,
-  "main": "app.js",
   "scripts": {
     "lint": "npx eslint --fix --cache --ignore-pattern 'docs/*' src",
     "build:server": "npx babel src/server -s --out-dir bin/server",
-    "work:server": "npx babel src/server -s --watch --verbose --out-dir bin/server",
+    "work:server": "npm babel src/server -s --watch --verbose --out-dir bin/server",
     "build:client": "npx webpack --progress --profile --colors",
     "work:client": "npx webpack --env=dev --progress",
     "build": "npm run build:server && npm run build:client"
@@ -29,7 +28,6 @@
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-react": "^7.9.4",
     "@becode/eslint-config": "^0.9.1",
-    "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "body-parser": "^1.19.0",
