--- a/package.json
+++ b/package.json
@@ -56,8 +56,10 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-use-storage": "^0.4.2"
+    "react-use-storage": "^0.4.2",
+    "universal-cookie": "^4.0.3"
   },
   "husky": {
     "hooks": {
