--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
   "scripts": {
     "lint": "npx eslint --fix --cache --ignore-pattern 'docs/*' src",
     "popo": "npm install --save-dev @babel/core @babel/cli",
-    "build:server": "npm install --save-dev @babel/core @babel/cli && npx babel src/server -s --out-dir bin/server",
+    "build:server": "npx babel src/server -s --out-dir bin/server",
     "work:server": "npx babel src/server -s --watch --verbose --out-dir bin/server",
     "build:client": "npx webpack --progress --profile --colors",
     "work:client": "npx webpack --env=dev --progress",
-    "build": "npm install --save-dev @babel/core @babel/cli && npm run build:server && npm run build:client"
+    "build": "npm run build:server && npm run build:client"
   },
   "lint-staged": {
     "*.js": [
