signin and signup

--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "axios": "^0.19.2",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "css-loader": "^3.5.3",
     "eslint": "^7.0.0",
     "eslint-plugin-prettier": "^3.1.3",
@@ -40,6 +42,7 @@
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
     "husky": "^4.2.5",
+    "jsonwebtoken": "^8.5.1",
     "less-loader": "^6.1.0",
     "lint-staged": "^10.2.3",
     "mongoose": "^5.9.17",
@@ -56,14 +59,12 @@
     "@progress/kendo-react-popup": "^3.14.0",
     "babel-preset-es2015": "^6.24.1",
     "balanced-match": "^1.0.0",
-    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "bulma": "^0.8.2",
     "bulma-helpers": "^0.3.12",
     "bulma-spacing": "^2.0.4",
     "chokidar": "^3.4.0",
     "express-validator": "^6.5.0",
-    "jsonwebtoken": "^8.5.1",
     "leaflet": "^1.6.0",
     "mongoose": "^5.9.17",
     "create-react-app": "^3.4.1",
