--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "author": "leny <leny@becode.org>",
   "license": "MIT",
   "private": true,
+  "engines": {
+  "node": "6.11.1"
+  },
   "scripts": {
     "lint": "npx eslint --fix --cache --ignore-pattern 'docs/*' src",
     "build:server": "npx babel src/server -s --out-dir bin/server",
