--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
         ]
     },
     "devDependencies": {
+        "@babel/cli": "^7.10.1",
+        "@babel/core": "^7.10.2",
         "@becode/eslint-config": "^0.9.1",
         "axios": "^0.19.2",
         "babel-eslint": "^10.1.0",
