--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "devDependencies": {
         "@babel/cli": "^7.10.1",
         "@babel/core": "^7.10.2",
+        "@babel/plugin-proposal-class-properties": "^7.10.1",
         "@babel/plugin-proposal-decorators": "^7.10.1",
         "@babel/plugin-proposal-object-rest-spread": "^7.10.1",
         "@becode/eslint-config": "^0.9.1",
