--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "@babel/plugin-proposal-decorators": "^7.10.1",
         "@babel/plugin-proposal-object-rest-spread": "^7.10.1",
         "@babel/preset-env": "^7.10.2",
+        "@babel/preset-react": "^7.10.1",
         "@becode/eslint-config": "^0.9.1",
         "axios": "^0.19.2",
         "babel-eslint": "^10.1.0",
