--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
         "build:client": "npx webpack --progress --profile --colors",
         "work:client": "npx webpack --env=dev --progress",
         "build": "npm run build:server && npm run build:client",
-        "start": "npm run build"
+        "start": "npm start"
     },
     "lint-staged": {
         "*.js": [
