--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "body-parser": "^1.19.0",
         "cors": "^2.8.5",
         "css-loader": "^3.5.3",
+        "dotenv": "^8.2.0",
         "eslint": "^7.0.0",
         "eslint-plugin-prettier": "^3.1.3",
         "eslint-plugin-react": "^7.20.0",
