--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
         "react-bulma-components": "^3.3.0",
         "react-color": "^2.18.1",
         "react-dom": "^16.13.1",
+        "react-router-dom": "^5.2.0",
         "react-hook-form": "^5.7.2",
         "react-leaflet": "^2.7.0",
         "react-native-indicative": "^0.2.1",
