--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "eslint-plugin-prettier": "^3.1.3",
         "eslint-plugin-react": "^7.20.0",
         "eslint-plugin-unicorn": "^20.1.0",
+        "fantasy-name-generator": "^2.0.0",
         "file-loader": "^6.0.0",
         "html-webpack-plugin": "^4.3.0",
         "husky": "^4.2.5",
