--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
         "lint-staged": "^10.2.3",
         "mongoose": "^5.9.17",
         "prettier": "^2.0.5",
+        "react-gravatar": "^2.6.3",
         "style-loader": "^1.2.1",
         "uglifyjs-webpack-plugin": "^2.2.0",
         "webpack": "^4.28.4",
