--- a/package.json
+++ b/package.json
@@ -77,12 +77,14 @@
         "prop-types": "^15.7.2",
         "react": "^16.13.1",
         "react-bulma-components": "^3.3.0",
+        "react-circle-gravatar": "0.0.0",
         "react-color": "^2.18.1",
         "react-dom": "^16.13.1",
         "react-gravatar": "^2.6.3",
         "react-hook-form": "^5.7.2",
         "react-leaflet": "^2.7.0",
         "react-leaflet-markercluster": "^2.0.0",
+        "react-native-avatar-gravatar": "0.0.4",
         "react-native-indicative": "^0.2.1",
         "react-router-dom": "^5.2.0",
         "save": "^2.4.0"
