--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
         "work:server": "npx babel src/server -s --watch --verbose --out-dir bin/server",
         "build:client": "npx webpack --progress --profile --colors",
         "work:client": "npx webpack --env=dev --progress",
-        "build": "npm run build:server && npm run build:client",
-        "start": "npm run build"
+        "build": "npm run build:server && npm run build:client"
     },
     "lint-staged": {
         "*.js": [
