--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
         "build:client": "npx webpack --progress --profile --colors",
         "work:client": "npx webpack --env=dev --progress",
         "build": "npm run build:server && npm run build:client",
-        "start": "node bin/server/index.js",
-        "heroku-postbuild":"NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+        "start": "node bin/server/index.js"
     },
     "lint-staged": {
         "*.js": [
