--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "lint": "npx eslint --fix --cache --ignore-pattern 'docs/*' src",
     "build": "npm run build:server && npm run build:client",
-    "heroku-postbuild": "echo Skip build on Heroku"
+    "start": "node bin/server/index.js"
   },
   "lint-staged": {
     "*.js": [
