--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "private": true,
   "main": "bin/server/index.js",
   "engines": {
-    "node": "10.19.0",
-    "npm": "6.14.4"
+    "node": "10.19.0"
   },
   "scripts": {
     "lint": "npx eslint --fix --cache --ignore-pattern 'docs/*' src",
