--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "author": "leny <leny@becode.org>",
   "license": "MIT",
   "private": true,
-  "main": "bin/server/index.js",
   "engines": {
     "node": "10.19.0"
   },
@@ -16,7 +15,7 @@
     "build:client": "npx webpack --progress --profile --colors",
     "work:client": "npx webpack --env=dev --progress",
     "build": "npm run build:server && npm run build:client",
-    "start": "node bin/server/index.js"
+    "start": "node ./bin/server/index.js"
   },
   "lint-staged": {
     "*.js": [
