--- a/package.json
+++ b/package.json
@@ -94,7 +94,38 @@
     "react-router-dom": "^5.2.0",
     "react-scrollbar": "^0.5.6",
     "react-scrollbars-custom": "^4.0.25",
-    "save": "^2.4.0"
+    "save": "^2.4.0",
+    "@babel/cli": "^7.10.1",
+    "@babel/core": "^7.10.2",
+    "@babel/plugin-proposal-class-properties": "^7.10.1",
+    "@babel/plugin-proposal-decorators": "^7.10.1",
+    "@babel/plugin-proposal-object-rest-spread": "^7.10.1",
+    "@babel/preset-env": "^7.10.2",
+    "@babel/preset-react": "^7.10.1",
+    "@becode/eslint-config": "^0.9.1",
+    "axios": "^0.19.2",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.1.0",
+    "body-parser": "^1.19.0",
+    "css-loader": "^3.5.3",
+    "dotenv": "^8.2.0",
+    "eslint": "^7.0.0",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-unicorn": "^20.1.0",
+    "fantasy-name-generator": "^2.0.0",
+    "file-loader": "^6.0.0",
+    "html-webpack-plugin": "^4.3.0",
+    "husky": "^4.2.5",
+    "less-loader": "^6.1.0",
+    "lint-staged": "^10.2.3",
+    "mongoose": "^5.9.17",
+    "prettier": "^2.0.5",
+    "react-gravatar": "^2.6.3",
+    "style-loader": "^1.2.1",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "webpack": "^4.28.4",
+    "webpack-cli": "^3.3.11"
   },
   "husky": {
     "hooks": {
