--- a/package.json
+++ b/package.json
@@ -60,8 +60,8 @@
     "chokidar": "^3.4.0",
     "cors": "^2.8.5",
     "create-react-app": "^3.4.1",
-    "css-loader": "^3.5.3",
-    "dotenv": "^8.2.0",    "express": "^4.17.1",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "express-validator": "^6.5.0",
     "fantasy-name-generator": "^2.0.0",
     "gravatar": "^1.8.0",
