--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
         "@progress/kendo-react-popup": "^3.14.0",
         "balanced-match": "^1.0.0",
         "body-parser": "^1.19.0",
+        "bootstrap": "^3.4.1",
         "bulma": "^0.8.2",
         "bulma-helpers": "^0.3.12",
         "bulma-spacing": "^2.0.4",
@@ -83,6 +84,7 @@
         "react-circle-gravatar": "0.0.0",
         "react-color": "^2.18.1",
         "react-custom-scrollbars": "^4.2.1",
+        "react-dimensions": "^1.3.1",
         "react-dom": "^16.13.1",
         "react-gravatar": "^2.6.3",
         "react-hook-form": "^5.7.2",
@@ -93,6 +95,7 @@
         "react-perfect-scrollbar": "^1.5.8",
         "react-router-dom": "^5.2.0",
         "react-scrollbar": "^0.5.6",
+        "react-scrollbar-js": "^1.0.1",
         "react-scrollbars-custom": "^4.0.25",
         "save": "^2.4.0"
     },
