--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
         "react-scrollbar": "^0.5.6",
         "react-scrollbar-js": "^1.0.1",
         "react-scrollbars-custom": "^4.0.25",
+        "react-spinners-kit": "^1.9.1",
         "save": "^2.4.0"
     },
     "husky": {
